Resolve "Hide sidebar on click on small screens"

--- a/vstutils/static/css/gui.css
+++ b/vstutils/static/css/gui.css
@@ -930,6 +930,11 @@ table{
     border-top-right-radius: 4px;
 }
 
+.nav-sidebar .nav-link .right {
+    padding: 3px 8px;
+    z-index: 1500;
+}
+
 /* styles for sidebar on small screens*/
 
 .open-menu-treeview-button {
